Reemplaze la base de datos , y agregue mas campos necesarios

--- a/css/estilos.css
+++ b/css/estilos.css
@@ -82,7 +82,7 @@ body,html{
   }
   
   .bg-success {
-	background-color: #28a745; /* Color de fondo verde */
+	background-color: #d4bb2b; /* Color de fondo verde */
 	color: #fff; /* Color de texto blanco o claro */
   }
   
