--- a/css/login.css
+++ b/css/login.css
@@ -19,7 +19,7 @@ body{
 	bottom: -40px;
 	width: auto;
 	height: auto;
-	background-image:url('../img/portada.jpg');
+	background-image:url('../img/verde.jpg');
     filter: blur(5px);
 	background-size: cover;
 	
@@ -148,22 +148,25 @@ body{
 
 .login input[type=text]:focus{
 	outline: none;
-	border: 1px solid rgba(255,255,255,0.9);
+	border: 1px solid rgba(255, 255, 255, 0.9);
 }
 
 .login input[type=password]:focus{
 	outline: none;
-	border: 1px solid rgba(255,255,255,0.9);
+	border: 1px solid rgba(244, 250, 241, 0.9);
 }
 
 .login input[type=button]:focus{
 	outline: none;
 }
 
-::-webkit-input-placeholder{
-   color: rgba(255,255,255,0.6);
+
+
+
+::placeholder {
+    color:darkgreen;
 }
 
-::-moz-input-placeholder{
-   color: rgba(255,255,255,0.6);
+.input::placeholder {
+    color:#a18d6c;
 }
